# omr

./: .clang-format  .gitignore  .travis.yml  3spaces-to-4spaces.awk  CMakeLists.txt  OmrConfig.cmake  configure  configure.ac  omrcfg.CMakeTemplate.h  reformat.sh  tabs-to-4spaces.awk
cmake/: CheckSourceTree.cmake  config.cmake  versions.cmake
cmake/caches/: GcApi.cmake  GcExtendedApi.cmake  Om.cmake
cmake/modules/: FindDiaSDK.cmake  FindLibDwarf.cmake  FindLibElf.cmake  OmrAssert.cmake  OmrHookgen.cmake  (+9 more)
example/: CMakeLists.txt  gcmain.cpp  makefile
fvtest/: CMakeLists.txt
gc/: CMakeLists.txt
glue/: ArrayletObjectModel.hpp  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ContractslotScanner.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MixedObjectModel.hpp  ObjectIterator.hpp  ObjectModel.hpp  ObjectScannerState.hpp  Profiling.c  StartupManagerImpl.cpp  StartupManagerImpl.hpp  UtilGlue.c  VerboseManagerImpl.cpp  VerboseManagerImpl.hpp  objectdescription.h  sizeclasses.h
include_core/: AtomicSupport.hpp  OMR_Agent.hpp  OMR_Base.hpp  OMR_BaseNonVirtual.hpp  OMR_BaseVirtual.hpp  OMR_Runtime.hpp  OMR_RuntimeConfiguration.hpp  OMR_VM.hpp  OMR_VMConfiguration.hpp  OMR_VMThread.hpp  avl_api.h  avlsup.h  fltconst.h  hashtable_api.h  hookable_api.h  j9nongenerated.h  j9pool.h  omr.h  omragent.h  omragent_internal.h  omravl.h  omravldefines.h  omrcfg.cmake.h.in  omrcfg.h.in  omrcomp.h  omrcuda.h  omrgcconsts.h  omrhashtable.h  omrhookable.h  omrintrospect_common.h  omrlinkedlist.h  omrmemcategories.h  omrport.h  omrporterror.h  omrprofiler.h  omrrasinit.h  omrsig.h  omrsrp.h  omrstdarg.h  omrthread.h  (+15 more)
nls/: portnls.h
om/: CMakeLists.txt  README.md
om/glue/: ArrayletObjectModel.hpp  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactDelegate.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ConcurrentMarkingDelegate.cpp  ConcurrentMarkingDelegate.hpp  ConfigurationDelegate.hpp  ContractslotScanner.hpp  EnvironmentDelegate.cpp  EnvironmentDelegate.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  GlobalCollectorDelegate.cpp  GlobalCollectorDelegate.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MarkingDelegate.cpp  MarkingDelegate.hpp  MixedObjectModel.hpp  MixedObjectScanner.hpp  ObjectIterator.cpp  ObjectIterator.hpp  ObjectModel.hpp  ObjectModelDelegate.cpp  ObjectModelDelegate.hpp  ObjectScannerState.hpp  ObjectSlotWalker.hpp  Profiling.c  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp  SlotHandle.hpp  StandardObjectScanner.hpp  StartupManagerImpl.cpp  StartupManagerImpl.hpp  UtilGlue.c  VerboseManagerImpl.cpp  VerboseManagerImpl.hpp  (+3 more)
om/glue/OMR/App/: ObjectScanner.hpp
om/include/OMR/Infra/: BitUtilities.hpp  Cons.hpp  Double.hpp  HashUtilities.hpp  PointerUtilities.hpp  Span.hpp
om/include/OMR/Om/: Address.hpp  Allocation.hpp  Allocator.hpp  Allocator.inl.hpp  Any.hpp  AnyCell.hpp  AnyScanner.hpp  AnySlotWalker.hpp  Array.hpp  ArrayBuffer.hpp  ArrayBuffer.inl.hpp  ArrayBufferAllocator.hpp  ArrayBufferInitializer.hpp  ArrayBufferShape.hpp  ArrayBufferShape.inl.hpp  ArrayInitializer.hpp  ArrayOperations.hpp  ArrayRef.hpp  ArrayScanner.hpp  Barrier.hpp  BaseScanner.hpp  BasicSlotHandle.hpp  BitUtilities.hpp  Box.hpp  Cell.hpp  CellAccess.hpp  CellHeader.hpp  CellKind.hpp  CellOperations.hpp  CellSlotWalker.hpp  Context.hpp  Context.inl.hpp  CoreType.hpp  Double.hpp  DynObject.hpp  DynObjectCell.hpp  Globals.hpp  Handle.hpp  HashTable.hpp  HashUtilities.hpp  (+62 more)
om/include/OMRClient/GC/: ObjectScanner.hpp
om/src/: Context.cpp  Globals.cpp  JitHelpers.cpp  MemoryManager.cpp  MemorySystem.cpp  Value.cpp
om/test/: CMakeLists.txt  DoubleTest.cpp  MemberHandleTest.cpp  MemoryManagerTest.cpp  MemorySystemTest.cpp  PolyMapTest.cpp  PrintingTest.cpp  RefTest.cpp  RootTest.cpp  ValueTest.cpp  main.cpp
omr/: CMakeLists.txt  OMR_Agent.cpp  OMR_MethodDictionary.cpp  OMR_MethodDictionary.hpp  OMR_Profiler.cpp  OMR_Runtime.cpp  OMR_TI.cpp  OMR_TIMemorySize.cpp  OMR_VM.cpp  OMR_VMThread.cpp
omrsigcompat/: omrsig.cpp  omrsig_internal.hpp
omrtrace/: omrtrace_internal.h  omrtraceapi.cpp  omrtracecomponent.cpp  omrtraceformatter.cpp  omrtracelog.cpp  omrtracemain.cpp  omrtracemisc.cpp  omrtraceoptions.cpp  omrtracepublish.cpp  omrtracewrappers.cpp
port/: omrportpriv.h
scripts/: ArrayLayout.hpp
thread/: omrthreadinspect.c  omrthreadinspect.h
(+2493 files in other folders)
